# BuildCycle

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTNET_DEMO.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: Dockerfile  package-lock.json  package.json  tsconfig.json
backend/indexer/: Cargo.toml
backend/indexer/src/: main.rs
backend/src/: db.ts  index.ts
backend/src/middleware/: auth.ts
backend/src/routes/: auth.ts  batches.ts
backend/src/services/: ipfs.ts
backend/src/types/: db.ts
contracts/: Cargo.toml
contracts/batch-token/: Cargo.toml
contracts/batch-token/src/: lib.rs
contracts/community-pool/: Cargo.toml
contracts/community-pool/src/: lib.rs
contracts/escrow/: Cargo.toml
contracts/escrow/src/: lib.rs
docs/: architecture.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: ConditionReportCard.tsx  ErrorBoundary.tsx  IPFSUploader.tsx  LoadingSkeleton.tsx  MapPicker.tsx  PathPaySelector.tsx  QRGenerator.tsx  QRScanner.tsx  WalletConnector.tsx
frontend/src/hooks/: useEscrow.ts
frontend/src/pages/: _app.tsx  browse.tsx  dashboard.tsx  disputes.tsx  index.tsx  pool.tsx  scan.tsx  sell.tsx
frontend/src/stores/: useWalletStore.ts
frontend/src/styles/: globals.css
frontend/src/utils/: mockContract.ts  mockData.ts  stellar.ts
scripts/: deploy-contracts.sh  e2e-test.sh  seed-database.ts  setup-testnet.sh
(+1 files in other folders)
