[package]
name = "buildcycle-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.1.1"
buildcycle-community-pool = { path = "../community-pool" }

[dev-dependencies]
soroban-sdk = { version = "21.1.1", features = ["testutils"] }
buildcycle-batch-token = { path = "../batch-token" }
